@@ -184,7 +184,7 @@ class APIManager(object):
 
         """
         self.app = app
-        self.session = session or flask_sqlalchemy_db.session
+        self.session = session or getattr(flask_sqlalchemy_db, 'session', None)
         if isinstance(self.session, type):
             self.session = scoped_session(self.session)
 
